Plot estimated 1 rep max progression for each exercise on dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,12 @@
 
     <title>Workout Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
+    <script>
+        window.addEventListener('resize', function () {
+            window.dispatchEvent(new Event('resize'));
+        })
+    </script>
 </head>
 
 <body>
