--- a/templates/person.html
+++ b/templates/person.html
@@ -95,4 +95,50 @@
         </div>
     </div>
 </div>
+
+<div class="mt-4 w-full grid grid-cols-1 md:grid-cols-3 2xl:grid-cols-4 xl:grid-cols-5 gap-4">
+    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+        <div class="flex items-center">
+            <div class="flex-shrink-0">
+                <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">{{
+                    person['Stats']['NumberOfWorkouts'] }}</span>
+                <h3 class="text-base font-normal text-gray-500">Total workouts tracked</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+        <div class="flex items-center">
+            <div class="flex-shrink-0">
+                <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">{{
+                    person['Stats']['TrainingDurationInDays'] }}</span>
+                <h3 class="text-base font-normal text-gray-500">Duration of workout tracking</h3>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+        <div class="flex items-center">
+            <div class="flex-shrink-0">
+                <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">{{
+                    person['Stats']['AverageWorkoutsPerWeek'] }}</span>
+                <h3 class="text-base font-normal text-gray-500">Average weekly workouts</h3>
+            </div>
+        </div>
+    </div>
+
+    {% if person['Stats']['NumberOfWorkouts'] > 0 %}
+    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
+        <div class="flex items-center">
+            <div class="flex-shrink-0">
+                <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">{{
+                    person['Stats']['DaysSinceLastWorkout'] }}</span>
+                <h3 class="text-base font-normal text-gray-500">Days since last workout</h3>
+            </div>
+        </div>
+    </div>
+    {% endif %}
+
+</div>
+
 {% endblock %}
