--- a/templates/index.html
+++ b/templates/index.html
@@ -90,18 +90,6 @@
 
 </div>
 
-<div class="mt-4 w-full grid grid-cols-1 md:grid-cols-3 2xl:grid-cols-4 xl:grid-cols-5 gap-4">
-    {% for stat in model['Stats'] %}
-    <div class="bg-white shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
-        <div class="flex items-center">
-            <div class="flex-shrink-0">
-                <span class="text-2xl sm:text-3xl leading-none font-bold text-gray-900">{{
-                    stat['Value'] }}</span>
-                <h3 class="text-base font-normal text-gray-500">{{ stat['Text'] }}</h3>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-</div>
+{{ render_partial('partials/stats.html', stats=model['Stats']) }}
 
 {% endblock %}
