--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <title>Workout Tracker</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.plot.ly/plotly-2.14.0.min.js"></script>
+    <script src="https://unpkg.com/htmx.org"></script>
+    <script src="https://unpkg.com/hyperscript.org"></script>
+
     <script>
         function debounce(func, timeout = 300) {
             let timer;
